@@ -50,6 +50,7 @@ AC_DEFUN([gl_INIT],
   gl_FUNC_MEMMOVE
   gl_FUNC_MEMPCPY
   gl_FUNC_MEMRCHR
+  gl_MINMAX
   gl_FUNC_MKDIR_TRAILING_SLASH
   gl_FUNC_MKSTEMP
   gl_FUNC_MKTIME
